# curve25519

./: Cargo.toml  curve25519-n.win32-x64-msvc.node  index.d.ts  index.js  package.json  tsconfig.json
.github/workflows/: CI.yml
__test__/: curve.js  index.spec.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: curve.rs  error.rs  lib.rs  utils.rs
src/curve/: curve25519.rs
