[package]
edition = "2021"
name = "curve25519-n"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.1.0", default-features = false, features = ["napi4"] }
napi-derive = "2.1.0"

curve25519-dalek = { version = "3.0", features = ["serde"] }
subtle = "2.2.3"
x25519-dalek = "1.0"
rand = "0.7.3"
sha2 = "0.9"
displaydoc = "0.2"
thiserror = "1.0.30"
arrayref = "0.3.6"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
